--- a/css/main.scss
+++ b/css/main.scss
@@ -58,7 +58,8 @@ body
     width: 450px;
     padding: 2em 2em;
     margin: auto;
-    margin-top: 8em;
+    margin-top: 1em;
+    margin-bottom: 5em;
     border-radius: .6em 1.2em;
     animation: fadeIn 2s;
     border-color: var(--white);
