Added height for better viewing

--- a/css/reg.scss
+++ b/css/reg.scss
@@ -13,6 +13,7 @@ body
 {
     background-color: var(--primary-color);
     margin: 0;
+    margin-bottom: 8em;
     font-family: 'Poppins';
 }
 
@@ -61,7 +62,7 @@ body
     width: 450px;
     padding: 2em 2em;
     margin: auto;
-    margin-top: 8em;
+    margin-top: 3em;
     border-radius: .6em 1.2em;
     border-color: var(--white);
     border-width: 0.2rem;
