--- a/css/reg.css
+++ b/css/reg.css
@@ -8,6 +8,7 @@
 body {
   background-color: var(--primary-color);
   margin: 0;
+  margin-bottom: 8em;
   font-family: 'Poppins';
 }
 
@@ -49,7 +50,7 @@ body {
   width: 450px;
   padding: 2em 2em;
   margin: auto;
-  margin-top: 8em;
+  margin-top: 3em;
   border-radius: .6em 1.2em;
   border-color: var(--white);
   border-width: 0.2rem;
