Changed the search error to have an error icon

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -77,11 +77,15 @@ body {
 .contacts #search-error {
   display: none;
   background-color: #b8443b;
-  margin-bottom: 1em;
-  padding: .7em .7em;
-  font-weight: 400;
-  font-size: 1em;
+  padding: .7em .7em 0.7em 0.7em;
   border-radius: 5px 5px;
+}
+
+.contacts #search-error i {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-right: 0.5em;
 }
 
 .contacts h1 {
