--- a/css/contacts.scss
+++ b/css/contacts.scss
@@ -173,6 +173,11 @@ body
                     background-color: var(--primary-color-600);
                     cursor: pointer;
                 }
+
+                i 
+                {
+                    pointer-events: none;
+                }
             }
         }
 
@@ -541,6 +546,10 @@ body
                 top:1px;
             }
             
+            i 
+            {
+                pointer-events: none;
+            }
         }
 
         .edit-btn
@@ -572,6 +581,11 @@ body
             {
                 position:relative;
                 top:1px;
+            }
+
+            i 
+            {
+                pointer-events: none;
             }
         }
 
